--- a/pom.xml
+++ b/pom.xml
@@ -197,12 +197,12 @@ SOFTWARE.
     <dependency>
       <groupId>io.surati.gap</groupId>
       <artifactId>admin-base</artifactId>
-      <version>0.5.1</version>
+      <version>0.5.2</version>
     </dependency>
     <dependency>
       <groupId>io.surati.gap</groupId>
       <artifactId>payment-base</artifactId>
-      <version>0.3.0</version>
+      <version>0.3.1-alpha.1</version>
     </dependency>
   </dependencies>
   <build>
